<resources>
    <string name="app_name">EcoJourney</string>
    <string name="title_home">Home</string>
    <string name="title_articles">Articles</string>
    <string name="title_history">History</string>
    <string name="scan_your_waste">Scan Your Waste!</string>
    <string name="scan_help">To get articles about your waste you need to take a picture</string>
    <string name="scan">Scanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_result_image">Scan Result image</string>
    <string name="waste_type">Waste Type</string>
    <string name="view_articles"><![CDATA[View Articles >]]></string>
    <string name="scan_results">Scan Results</string>
    <string name="title_waste_scan">Waste Scan</string>
    <string name="tflitevision_is_not_initialized_yet">TfLiteVision is not initialized yet</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="logout">Logout</string>
    <string name="sign_in_message">Sign in to your account</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="email_hint">Enter your email</string>
    <string name="create_new_account">Create new account</string>
    <string name="eco">Eco</string>
    <string name="journey">Journey</string>
    <string name="onBoardingMessageTitle">Make Impact</string>
    <string name="onBoardingMessage">Sign up today and let\'s start the journey towards a healthy and sustainable environment.</string>
    <string name="create_account">Create Account</string>
    <string name="have_account">Have account?</string>
    <string name="log_in">Log In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="home_date">Monday, 20 Jan</string>
    <string name="home_banner">Home Banner</string>
    <string name="ecojourney_icon">EcoJourney Icon</string>
    <string name="impactful_features">Impactful Features</string>
    <string name="home_features_desc">Choose what you want to do today</string>
    <string name="home_features_title">Impactful Features</string>
    <string name="home_faq_title">Frequently Asked Question</string>

    <!--  FAQ  -->
    <string name="faq_question_1">What is EcoJourney?</string>
    <string name="faq_answer_1">EcoJourney is an app that promotes environmental awareness and sustainable living.</string>
    <string name="faq_question_2">How do I use the waste recognition feature?</string>
    <string name="faq_answer_2">Simply scan the waste item with your phone\'s camera and the app will classify it.</string>
    <string name="faq_question_3">Can I receive personalized content recommendations?</string>
    <string name="faq_answer_3">Yes, the app provides articles and news based on your waste classification and preferences.</string>
    <string name="faq_question_4">Is my data secure with EcoJourney?</string>
    <string name="faq_answer_4">Yes, EcoJourney ensures user data is encrypted and stored securely.</string>
    <string name="home_faq_desc">Quick answers to common questions</string>
    <string name="home_logout_button">Logout Button</string>
    <string name="home_feature_desc1">Waste Detection \nand Classification</string>
    <string name="home_feature_desc2">Article and News \nRecommendation</string>
    <string name="scan_history">Scan History</string>
    <string name="scan_date">Scan Date</string>
    <string name="waste_count">1</string>
    <string name="waste_scanned">Waste scanned</string>

    <string name="eco_news_title">Eco News</string>
    <string name="latest_article_title">Latest Article</string>
    <string name="failed_retrieve_msg">Failed to retrieve the data</string>
    <string name="retry">Retry</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="back_button">Back Button</string>
    <string name="publisher_placeholder">Kompas.com</string>
    <string name="publish_date_placeholder">10 Juni 2024</string>
    <string name="article_title">Article Title</string>
    <string name="read_article">Read Article</string>
    <string name="password_hint">Enter your password</string>
    <string name="name_hint">Enter your name</string>
    <string name="confirm_password_hint">Enter your password again</string>
    <string name="sign_in">Sign In</string>
    <string name="home_feature_desc3">Waste Type \nClassification History</string>
    <string name="name">Name</string>

</resources>