<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit.ecojourney.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_articles"
        android:name="com.bangkit.ecojourney.ui.article.ArticleFragment"
        android:label="@string/title_articles"
        tools:layout="@layout/fragment_article" >
        <action
            android:id="@+id/action_navigation_articles_to_detailArticleFragment"
            app:destination="@id/detailArticleFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.bangkit.ecojourney.ui.wastescan.WasteScanFragment"
        android:label="@string/title_waste_scan"
        tools:layout="@layout/fragment_waste_scan" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.bangkit.ecojourney.ui.notifications.NotificationsFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/detailArticleFragment"
        android:name="com.bangkit.ecojourney.ui.article.DetailArticleFragment"
        android:label="DetailArticleFragment">
    </fragment>
</navigation>