<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.OnBoardingActivity">

    <LinearLayout
        android:id="@+id/pageTitleContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eco"
            android:fontFamily="@font/inter_bold"
            android:textSize="34sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/journey"
            android:fontFamily="@font/inter_bold"
            android:textSize="34sp"
            android:textColor="@color/primary"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/onBoardingImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_onboarding"
        android:layout_marginTop="44dp"
        app:layout_constraintTop_toBottomOf="@id/pageTitleContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/messageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onBoardingMessageTitle"
        android:fontFamily="@font/inter_bold"
        android:textSize="34sp"
        android:textColor="@color/black"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toBottomOf="@id/onBoardingImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onBoardingMessage"
        android:fontFamily="@font/inter_regular"
        android:textSize="17sp"
        android:textColor="@color/gray"
        android:layout_marginHorizontal="21dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/messageTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/rounded_button_30"
        android:text="@string/create_account"
        android:fontFamily="@font/inter_semi_bold"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message"/>

    <TextView
        android:id="@+id/haveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="2dp"
        android:text="@string/have_account"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@id/registerButton" />

    <TextView
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="2dp"
        android:text="@string/sign_in"
        android:textColor="@color/ngreen_300"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/haveAccount"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintStart_toEndOf="@id/haveAccount"
        app:layout_constraintTop_toBottomOf="@id/registerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>